modify rviz_plugin comile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(time_optimizer)
 
+#add_subdirectory(${PROJECT_SOURCE_DIR}/utils/waypoint_generator)
+#add_subdirectory(${PROJECT_SOURCE_DIR}/utils/rviz_plugins)
+
 find_package(catkin REQUIRED COMPONENTS roscpp std_msgs nav_msgs visualization_msgs tf)
 find_package(Eigen3 REQUIRED)
 find_package(PCL 1.7 REQUIRED)
