--- a/utils/rviz_plugins/package.xml
+++ b/utils/rviz_plugins/package.xml
@@ -14,11 +14,11 @@
 
   <build_depend>rviz</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>multi_map_server</build_depend>
+  <!--build_depend>multi_map_server</build_depend-->
   <build_depend>qtbase5-dev</build_depend>
   
   <run_depend>rviz</run_depend>
-  <run_depend>multi_map_server</run_depend>
+  <!--run_depend>multi_map_server</run_depend-->
   <run_depend>roscpp</run_depend>
   <run_depend>libqt5-core</run_depend>
   <run_depend>libqt5-gui</run_depend>
